@@ -2,6 +2,11 @@
 
 	* include/libbk.h: bk_ioh_printf takes const char *format
 
+2002-08-12  James Tanis  <jtt@saint.sysdetect.com>
+
+	* lib/b_netutils.c (bk_inet_ntoa): "Thread safe" version of
+	inet_ntoa(). 
+
 2002-08-05  Alexander Dupuy  <dupuy@sysdetect.com>
 
 	* lib/b_url.c (bk_url_parse): break out host/service from authority
